# parallel_signature_generator

./: .gitignore  CMakeLists.txt  psg.cpp
src/cli_parser/: cli_parser.cpp  cli_parser.h
src/data_structures/buffer/: buffer.h
src/data_structures/shared_queue/: shared_queue.h
src/defs/: defs.h
src/hash_calculator/: hash_calculator.h
src/hash_calculator/md5_hash_calculator/: md5_hash_calculator.cpp  md5_hash_calculator.h
src/reader/: reader.h
src/reader/file_reader/: file_reader.cpp  file_reader.h
src/task/: task.h
src/task/hash_task/: hash_task.cpp  hash_task.h
src/task/reader_task/: reader_task.cpp  reader_task.h
src/task/writer_task/: writer_task.cpp  writer_task.h
src/threadpool/: threadpool.cpp  threadpool.h
src/writer/: writer.h
src/writer/file_writer/: file_writer.cpp  file_writer.h
